[package]
name = "cards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deckofcards = { git = "https://github.com/jtickle/deckofcards-rs", version = "0.4.1"}
rand = "0.8"
rand_pcg = "0.3"
termion = "1.5"
tui = "0.16"
